src/components/Menu/Menu.module.css
.menu {
  margin-top: 200px;
  position: relative;
}

.meals {
  width: 90%;
  max-width: 70rem;
  list-style: none;
  margin: 2rem auto;
  padding: 1rem;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
  gap: 1rem;
  min-height: calc(100vh);
}

.fetch {
  text-align: center;
  margin-bottom: 100%;
}

@media (max-width: 400px) {
  .meals {
    width: 90%;
  }
}

